network-policy/base/policies/argocd.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-application-controller
  namespace: argocd
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'argocd-application-controller'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 8082
  egress:
    - action: Allow

---

apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-redis
  namespace: argocd
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'argocd-redis'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 6379
  egress:
    - action: Allow

---

apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-repo-server
  namespace: argocd
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'argocd-repo-server'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 8081
          - 8084
  egress:
    - action: Allow

---

apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-argocd-server
  namespace: argocd
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'argocd-server'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 8080
          - 8083
  egress:
    - action: Allow
