network-policy/base/policies/internet-egress.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-squid
  namespace: internet-egress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'squid'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: role == 'cluster'
      destination:
        ports:
          - 3128
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-squid
  namespace: internet-egress
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 100.0
  selector: app.kubernetes.io/name == 'squid'
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'private'
    - action: Deny
      destination:
        selector: role == 'private'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-unbound
  namespace: internet-egress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'unbound'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: role == 'cluster'
      destination:
        ports:
          - 53
    - action: Allow
      protocol: UDP
      source:
        selector: role == 'cluster'
      destination:
        ports:
          - 53
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-unbound
  namespace: internet-egress
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  order: 100.0
  selector: app.kubernetes.io/name == 'unbound'
  types:
    - Egress
  egress:
    - action: Log
      destination:
        selector: role == 'private'
    - action: Deny
      destination:
        selector: role == 'private'
