network-policy/base/policies/kube-system.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-metrics-server
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: k8s-app == 'metrics-server'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 10250
