network-policy/base/policies/monitoring.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 7472
          - 9093
          - 9100
          - 9105
