network-policy/base/policies/teleport.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-teleport-proxy
  namespace: teleport
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'teleport' && app.kubernetes.io/component == 'proxy'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 3023
          - 3024
          - 3026
          - 3080
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-teleport-auth
  namespace: teleport
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'teleport' && app.kubernetes.io/component == 'auth'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 3025
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-teleport-proxy-node-allow
  namespace: teleport
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'teleport' && app.kubernetes.io/component == 'proxy'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 3022
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-teleport-auth-cke-allow
  namespace: teleport
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 500.0
  selector: app.kubernetes.io/name == 'teleport' && app.kubernetes.io/component == 'auth'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: role == 'node'
        ports:
          - 2379
