network-policy/base/policies/topolvm.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-topolvm-webhook
  namespace: topolvm-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  order: 1000.0
  selector: app.kubernetes.io/name == 'topolvm-hook'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 9252
